--- a/app/src/main/res/layout/activity_media_category_list.xml
+++ b/app/src/main/res/layout/activity_media_category_list.xml
@@ -24,10 +24,12 @@
             android:id="@+id/flex1"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="12dp"
+            android:paddingHorizontal="24dp"
             app:alignItems="center"
             app:flexDirection="row"
-            app:flexWrap="wrap">
+            app:flexWrap="wrap"
+            app:justifyContent="space_between"
+            >
 
 
         </com.google.android.flexbox.FlexboxLayout>
