--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,6 +10,7 @@
         <item name="android:statusBarColor">@color/background</item>
         <item name="android:fontFamily">@font/lexend</item>
 
+        <item name="android:textColor">@color/white</item>
         <item name="android:textColorSecondary">@color/white</item>
     </style>
 
