--- a/app/src/main/res/layout/activity_log_choice.xml
+++ b/app/src/main/res/layout/activity_log_choice.xml
@@ -19,7 +19,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="24dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/vector" />
+        android:src="@drawable/logo" />
 
     <TextView
         android:layout_width="wrap_content"
