--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -32,7 +32,7 @@
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/rectangle2" />
+                    android:background="@drawable/gradient_linear_from_top" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
