--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
@@ -37,8 +36,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
                     android:layout_marginTop="24dp"
+                    android:orientation="horizontal"
                     android:paddingHorizontal="24dp">
 
                     <ImageView
@@ -83,12 +82,13 @@
                 app:alignItems="center"
                 app:flexDirection="row"
                 app:justifyContent="space_between">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="Year"
                     android:textColor="@color/hint"
-                    android:textSize="14sp"
-                    android:text="Year" />
+                    android:textSize="14sp" />
             </com.google.android.flexbox.FlexboxLayout>
 
             <com.google.android.flexbox.FlexboxLayout
@@ -104,18 +104,18 @@
                     android:id="@+id/playButton"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/play"
+                    android:layout_marginEnd="12dp"
+                    android:drawableStart="@drawable/play"
                     android:drawablePadding="4dp"
                     android:text="@string/media_play_button"
                     android:textColor="@color/white"
-                    android:layout_marginEnd="12dp"
                     app:layout_flexGrow="1" />
 
                 <Button
                     android:id="@+id/downloadButton"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/download"
+                    android:drawableStart="@drawable/download"
                     android:drawablePadding="4dp"
                     android:text="@string/media_download_button"
                     android:textColor="@color/white"
@@ -145,30 +145,30 @@
             <HorizontalScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:layout_marginHorizontal="24dp">
+                android:layout_marginHorizontal="24dp"
+                android:layout_marginTop="24dp">
+
                 <LinearLayout
                     android:id="@+id/actorsContainer"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="horizontal"
-                    android:paddingVertical="8dp">
-                </LinearLayout>
+                    android:paddingVertical="8dp" />
             </HorizontalScrollView>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:paddingHorizontal="24dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingHorizontal="24dp">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/white"
-                    android:textSize="18sp"
                     android:text="@string/media_trailer_title"
-                    />
+                    android:textColor="@color/white"
+                    android:textSize="18sp" />
             </LinearLayout>
 
             <LinearLayout
@@ -176,9 +176,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:paddingHorizontal="24dp"
-                android:orientation="vertical">
-            </LinearLayout>
+                android:orientation="vertical"
+                android:paddingHorizontal="24dp"></LinearLayout>
 
 
         </LinearLayout>
@@ -188,7 +187,7 @@
         android:id="@+id/loading_spinner"
         style="?android:progressBarStyleLarge"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_gravity="center"
         android:layout_weight="1"
         android:indeterminateTint="@color/primary"
