--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/llContainer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -108,7 +109,8 @@
                             android:layout_height="wrap_content"
                             android:drawableLeft="@drawable/play"
                             android:text="@string/home_play_button"
-                            android:textColor="@color/white" />
+                            android:textColor="@color/white"
+                            tools:ignore="RtlHardcoded" />
 
                         <Button
                             android:id="@+id/highlight_download_button"
@@ -118,7 +120,8 @@
                             android:drawableLeft="@drawable/plus"
                             android:text="@string/home_add_list"
                             android:textColor="@color/white"
-                            android:theme="@style/Button.Secondary" />
+                            android:theme="@style/Button.Secondary"
+                            tools:ignore="RtlHardcoded" />
                     </LinearLayout>
                 </com.google.android.flexbox.FlexboxLayout>
             </RelativeLayout>
