--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -40,7 +40,8 @@
     <ScrollView
         android:id="@+id/randomContentLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
         <com.google.android.flexbox.FlexboxLayout
             android:id="@+id/randomContent"
@@ -70,5 +71,15 @@
             android:orientation="vertical"
             android:padding="24dp" />
     </ScrollView>
+
+    <ProgressBar
+        android:id="@+id/loading_spinner"
+        style="?android:progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:indeterminateTint="@color/primary"
+        android:progressTint="@color/primary" />
 
 </LinearLayout>
