--- a/app/src/main/res/layout/fragment_home_category.xml
+++ b/app/src/main/res/layout/fragment_home_category.xml
@@ -11,16 +11,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="24dp"
-        app:alignItems="center"
-        app:justifyContent="space_between">
+        app:alignItems="center">
 
         <TextView
             android:id="@+id/categoryTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            app:layout_flexGrow="1"
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="1"
             android:textColor="@color/white"
+            android:layout_marginEnd="4dp"
             android:textSize="18sp" />
 
         <TextView
