--- a/app/src/main/res/layout/modal_logout_bottom.xml
+++ b/app/src/main/res/layout/modal_logout_bottom.xml
@@ -4,24 +4,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bottom_sheet_dialog_rounded"
-    android:paddingVertical="24dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingVertical="24dp">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/logout_title"
         android:textAlignment="center"
-        android:textFontWeight="700"
         android:textColor="@color/danger"
+        android:textFontWeight="700"
         android:textSize="18sp" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginVertical="16dp"
         android:layout_marginHorizontal="24dp"
-        android:background="@color/hint" />
+        android:layout_marginVertical="16dp"
+        android:background="@color/background_light" />
 
     <TextView
         android:layout_width="match_parent"
@@ -35,24 +35,26 @@
     <com.google.android.flexbox.FlexboxLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="24dp"
         android:layout_marginTop="24dp"
+        android:paddingHorizontal="24dp"
         app:alignItems="center"
         app:flexDirection="row"
         app:justifyContent="center">
+
         <Button
             android:id="@+id/logout_cancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:theme="@style/Button.Secondary"
-            android:text="@string/logout_cancel" />
+            android:text="@string/logout_cancel"
+            android:theme="@style/Button.Secondary" />
+
         <Button
             android:id="@+id/logout_confirm"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:theme="@style/Base.Theme.Flixhub"
-            android:text="@string/logout_confirm" />
+            android:text="@string/logout_confirm"
+            android:theme="@style/Base.Theme.Flixhub" />
 
     </com.google.android.flexbox.FlexboxLayout>
 
