feat(profile): WIP adding & choosing

--- a/app/src/main/res/layout/activity_getting_started.xml
+++ b/app/src/main/res/layout/activity_getting_started.xml
@@ -24,6 +24,7 @@
         android:layout_marginHorizontal="24dp"
         android:layout_marginBottom="36dp"
         android:text="@string/gettingStarted_button"
+        android:textColor="@color/white"
         android:fontFamily="@font/lexend"
         />
 
