--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -8,9 +8,7 @@
     <item
         android:id="@+id/discover"
         android:icon="@drawable/compass"
-        android:title="Discover"
-
-        />
+        android:title="Discover" />
 
     <item
         android:id="@+id/list"
