--- a/app/src/main/res/layout/activity_log_choice.xml
+++ b/app/src/main/res/layout/activity_log_choice.xml
@@ -44,6 +44,7 @@
             android:layout_marginHorizontal="24dp"
             android:layout_marginBottom="16dp"
             android:fontFamily="@font/lexend"
+            android:textColor="@color/white"
             android:text="@string/log_choice_button" />
 
         <LinearLayout
