--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,45 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Base.Theme.Flixhub" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryVariant">@color/background</item>
+
+        <item name="colorPrimaryDark">@color/primary</item>
+
+        <item name="android:statusBarColor">@color/background</item>
+        <item name="android:fontFamily">@font/lexend</item>
+
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textColorSecondary">@color/white</item>
+    </style>
+
+    <style name="Button.Secondary" parent="Base.Theme.Flixhub">
+        <item name="colorPrimary">@color/secondary</item>
+    </style>
+
+    <style name="Button.Outline" parent="Base.Theme.Flixhub">
+        <item name="colorPrimary">#00000000</item>
+    </style>
+
+    <style name="Navbar.Flix" parent="Base.Theme.Flixhub">
+        <item name="android:color">@color/background</item>
+        <item name="colorPrimary">@color/primary</item>
+        <item name="colorPrimaryVariant">@color/background</item>
+        <item name="colorAccent">@color/background</item>
+        <item name="colorControlHighlight">@color/background</item>
+    </style>
+
+    <style name="Theme.Flixhub" parent="Base.Theme.Flixhub" />
+
+    <style name="Toolbar.Flix" parent="Base.Theme.Flixhub">
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="DatePicker.Flix" parent="@style/ThemeOverlay.MaterialComponents.Dialog">
+        <item name="colorSecondary">@color/primary</item>
+        <item name="colorPrimary">@color/primary</item> <!-- button text color -->
     </style>
 </resources>
